--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node createServer.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "MIT"
